--- a/coursera/static/css/homepage.css
+++ b/coursera/static/css/homepage.css
@@ -2,14 +2,16 @@ body {
     margin: 0;
     padding: 0;
 }
-body header {
+
+header {
     width: 100%;
     height: 80px;
     background-color: #000000;
     color: #FFFFFF;
-    font-family: Cursive;
+    font-family: Monospace;
     font-size: 125%;
 }
+
 .header-inner {
     padding-top: 40px;
 }
@@ -39,10 +41,12 @@ body header {
     float: right;
     width: 500px;
 }
+
 footer {
     background-color: #000000;
     color: #FFFFFF;
     height: 80px;
     padding: 10px;
     text-align: center;
+    font-family: Monospace;
 }
