--- a/coursera/static/css/homepage.css
+++ b/coursera/static/css/homepage.css
@@ -50,3 +50,9 @@ footer {
     text-align: center;
     font-family: Monospace;
 }
+
+.centre {
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
